- Renamed 'section-background' to 'stack-bg' to tie it to the layout - Removed 'center-content-holder' wrapper - Renamed center-content to stack-overlay - Fixed orientation switch mixin - Cleaned stack-overlay style from unneeded props - Remove font-family from %richbutton placeholder (defer to extender) - Set font for navigation - Added main img overlay text shadow (doubled) and modified margins between main sub title and action button - Replaced some detailed font settings with a shorthand (faster modification + less variables, but size only if no font math is necessary) - Chose different font families styles and sizes for nav, title and body elems - Remove button font props from spacings.scss

--- a/containers/split-view.scss
+++ b/containers/split-view.scss
@@ -58,17 +58,17 @@
 
 $orientation_list: 'horizontal vertical';
 
-@mixin orientation-stretch-sub($orientation: 'horizontal', $elem){
+@mixin orientation-stretch-sub($orientation: horizontal, $elem){
 
-    $list-index: list.index('horizontal vertical', $orientation);
+    $list-index: list.index(horizontal vertical, $orientation);
 
-    @if($list-index == 0){
+    @if($list-index == 1){
         #{$elem}{
             height: auto;
             width: 100%;
             object-fit:cover;
         }
-    } @else if($list-index == 1){
+    } @else if($list-index == 2){
         #{$elem}{
             height: 100%;
             width: auto;
@@ -82,12 +82,12 @@ $orientation_list: 'horizontal vertical';
     }
 }
 
-@mixin img-stretch($orientation: 'horizontal'){
+@mixin img-stretch($orientation: horizontal){
     @include orientation-stretch-sub($orientation, 'img');
 }
 
 .img-use-width {
-    @include img-stretch('horizontal');
+    @include img-stretch(horizontal);
     img {
         filter: saturate(50%) brightness(1.8);
     }
