--- a/controls/navbars.scss
+++ b/controls/navbars.scss
@@ -109,6 +109,13 @@ $letter-spacing: 2px !default;
     }
 }
 
+nav {
+    //font: vars.$nav-header-default-font-size vars.$nav-header-default-font-family;
+    font: vars.$nav-header-default-font;
+    //font-family: 'mulish';
+}
+
+
 @include helpers.screen-layout-break(vars.$small-screen-break) {
     .navlist {
         width: 100%;
