--- a/vars/_spacings.scss
+++ b/vars/_spacings.scss
@@ -27,9 +27,6 @@ $section-item-base-padding-lr: 20px;
     }
 }
 
-$buttons-font-size: 0.8rem;
-$buttons-letter-spacing: 2px;
-
 .nav-line-h {
     height: $nav-item-horizontal-height;
 }
